--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           python -m pip install -r requirements.txt
       - name: Build
         run: |
-          .\build.bat
+          .\build_ghactions.bat
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v5
         with:
